[package]
name = "izi-router"
version = "0.1.0"
edition = "2021"
description = "Mini routeur OpenAI-compatible — route automatiquement vers le modèle simple ou complexe selon le prompt. Multi-provider (DeepSeek, OpenAI, Groq, Anthropic, OpenRouter, etc.)"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-stream = "0.1"